# autoresearch-tabular

./: README.md  analysis.ipynb  prepare.py  program.md  pyproject.toml  results.tsv  train.py
