[project]
name = "autoresearch-tabular"
version = "0.1.0"
description = "Tabular XGBoost benchmark for hyperparameter tuning and sampling strategy experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "xgboost>=3.0.5",
]
